Adding unit tests